--- a/english.html
+++ b/english.html
@@ -277,6 +277,10 @@ Error message and password prompt
 
 <li>Coen Sisters</li>
 
+<li>Coffee</li>
+
+<li>Coffee shops</li>
+
 <li>Dandan went</li>
 
 <li>David Byrne</li>
@@ -295,9 +299,13 @@ Error message and password prompt
 
 <li>Films</li>
 
+<li>Food addicts</li>
+
 <li>Genevieve</li>
 
 <li>Gura</li>
+
+<li>HaAchim</li>
 
 <li>Here in the Ghetto</li>
 
@@ -317,6 +325,8 @@ Error message and password prompt
 
 <li>Iry</li>
 
+<li>Iry claims</li>
+
 <li>James Gandolfini</li>
 
 <li>Jeff Bridges</li>
@@ -334,6 +344,8 @@ Error message and password prompt
 <li>logo-bg</li>
 
 <li>Love</li>
+
+<li>Meals</li>
 
 <li>Meir Ariel</li>
 
@@ -355,6 +367,10 @@ Error message and password prompt
 
 <li>Radio epgb</li>
 
+<li>Recipes</li>
+
+<li>Restaurants</li>
+
 <li>Russell</li>
 
 <li>Saraleh would have liked it</li>
@@ -366,6 +382,8 @@ Error message and password prompt
 <li>The blue is already here</li>
 
 <li>The first assembly</li>
+
+<li>The kitchen according to Genevieve</li>
 
 <li>The lab</li>
 
@@ -8248,7 +8266,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[David Byrne]] [[Jeff Bridges]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8268,7 +8286,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213152530918" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213163020350" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8463,8 +8481,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 </pre>
 </div>
 <div created="20200213150440998" modified="20200213150620242" tags="[[Coen sister]] [[Single parent children]]" title="Alexandra">
-<pre>
-[img[pictures/alexandra.jpg]]
+<pre>[img[pictures/alexandra.jpg]]
 
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
@@ -8587,6 +8604,22 @@ Be good.
 
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
+<div created="20200213155644547" modified="20200213160815012" tags="[[Food addicts]] [[Coffee shops]] [[The kitchen according to Genevieve]]" title="Coffee">
+<pre>[img[pictures/coffee.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Coffee]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[קפה]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200213160902173" modified="20200213161305282" tags="[[Food addicts]] Coffee Metafiction" title="Coffee shops">
+<pre>[img[pictures/coffee-shops.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Coffee shops]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
+</div>
 <div created="20200212171338780" modified="20200212223524288" tags="[[Coen sister]] Mothers Houses [[True stories]]" title="Dandan went">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
@@ -8598,8 +8631,7 @@ Be good.
 </pre>
 </div>
 <div created="20200213152525438" modified="20200213152745210" tags="Music Films [[Outer sisters]]" title="David Byrne">
-<pre>
-[img[pictures/david-byrne.jpg]]
+<pre>[img[pictures/david-byrne.jpg]]
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
@@ -8665,9 +8697,17 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[סרטים]]&gt;&gt;
 </pre>
 </div>
+<div created="20200213154202937" modified="20200213154452151" tags="Kitchens [[Monkeys with car keys]] Coffee" title="Food addicts">
+<pre>[img[pictures/chayot-ochel.jpg]] 
+
+
+&lt;&lt;list-links filter:&quot;[tag[Food addicts]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[jחיות אוכל]]&gt;&gt;</pre>
+</div>
 <div created="20200213145354960" modified="20200213152652198" tags="[[Coen sister]] Mothers" title="Genevieve">
-<pre>
-[img[pictures/genevieve.jpg]]
+<pre>[img[pictures/genevieve.jpg]]
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
@@ -8676,6 +8716,14 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 
  &lt;&lt;heblink [[גורה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200213153541799" modified="20200213153941924" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
+<pre>[img[pictures/the-brothers.jpg]]
+
+
+ &lt;&lt;heblink [[האחים]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200212164615918" modified="20200212164757805" tags="Metafiction [[Outer sisters]]" title="Here in the Ghetto">
@@ -8770,9 +8818,16 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
 </div>
+<div created="20200213162602188" modified="20200213163043550" tags="[[Iry and Gura]]" title="Iry claims">
+<pre>[img[pictures/iri-toenet.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Iry claims]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אירי טוענת]]&gt;&gt;</pre>
+</div>
 <div created="20200213142319100" modified="20200213144413213" tags="[[Outer sisters]] Films TV [[TV Series]] [[The Sopranos]]" title="James Gandolfini">
-<pre>
-[img[pictures/james-gandolfini.jpg]]
+<pre>[img[pictures/james-gandolfini.jpg]]
 
 !!![[The team]]: 
 
@@ -8784,17 +8839,15 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 </pre>
 </div>
 <div created="20200213151742129" modified="20200213152000244" tags="Films [[Outer sisters]] Music" title="Jeff Bridges">
-<pre>
-[img[pictures/jeff-bridges.jpg]]
+<pre>[img[pictures/jeff-bridges.jpg]]
 
 
  &lt;&lt;heblink [[ג'ף ברידג'ס]]&gt;&gt;
  
 </pre>
 </div>
-<div created="20200213150957064" modified="20200213151234534" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
-<pre>
-[img[pictures/john-goodman.jpg]]
+<div created="20200213150957064" modified="20200213153649871" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
+<pre>[img[pictures/john-goodman.jpg]]
 
  &lt;&lt;heblink [[ג'ון גודמן]]&gt;&gt;</pre>
 </div>
@@ -8815,7 +8868,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213143317038" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213162655549" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -8845,6 +8898,13 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[אהבה]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200213154636920" modified="20200213161123485" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]]" title="Meals">
+<pre>[img[pictures/aruchot.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Meals]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[ארוחות]]&gt;&gt;</pre>
 </div>
 <div created="20200202175811447" modified="20200202180131685" tags="[[Outer sisters]] Music" title="Meir Ariel">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
@@ -8964,6 +9024,23 @@ He did his best at raising us as good people, and in most cases he even succeede
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
+<div created="20200213162147811" modified="20200213162429620" tags="Metafiction [[How many songs can you even invent at all]] [[Food addicts]] [[The team]] [[Iry claims]]" title="Recipes">
+<pre>[img[pictures/matconim.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Recipes]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[מתכונים]]&gt;&gt;
+</pre>
+</div>
+<div created="20200213155146777" modified="20200213155334654" tags="Kitchens [[Food addicts]]" title="Restaurants">
+<pre>[img[pictures/misadot.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Restaurants]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
+</div>
 <div created="20200202163339570" modified="20200202163759854" tags="[[Coen sister]] [[Single parent children]]" title="Russell">
 <pre>[img[pictures/rachel.jpg]]
 
@@ -9024,6 +9101,16 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 </pre>
 </div>
+<div created="20200213161521882" modified="20200213161924497" tags="Meals Kitchens Recipes" title="The kitchen according to Genevieve">
+<pre>[img[pictures/genevieve-food.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[The kitchen according to Genevieve]]&quot;&gt;&gt;
+
+&lt;&lt;heblink [[המטבח על פי ז'נבייב]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200202172756391" modified="20200202172934789" tags="Metafiction Houses [[The archive's trustees]]" title="The lab">
 <pre>[img[pictures/hamaabada.jpg]]
 
@@ -9044,9 +9131,8 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 </pre>
 </div>
-<div created="20200213142916801" modified="20200213143152931" tags="[[TV Series]] TV Kitchens Mothers" title="The Sopranos">
-<pre>
-[img[pictures/the-sopranos.jpg]]
+<div created="20200213142916801" modified="20200213155259643" tags="[[TV Series]] TV Kitchens Mothers" title="The Sopranos">
+<pre>[img[pictures/the-sopranos.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The Sopranos]]&quot;&gt;&gt;
 
