--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213152617294" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213155128893" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10266,7 +10266,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אירי וגורה]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170601134808349" modified="20180128154040177" tags="[[אירי וגורה]]" title="אירי טוענת">
+<div created="20170601134808349" modified="20200213163132623" tags="[[אירי וגורה]]" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 !!![[גורה]]:
@@ -10274,7 +10274,9 @@ well,
 אפילו בעבודה [[אצל ז'נבייב|הקוסקוס]] - אירי עולה על כולנו. 
 
 
-&lt;&lt;list-links filter:&quot;[tag[אירי טוענת]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[אירי טוענת]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[Iry claims]]&gt;&gt;</pre>
 </div>
 <div created="20170201204950366" modified="20170811170233223" tags="[[הנחלה בה גדלתי]]" title="איריס">
 <pre>[img[pictures/iris.jpg]]
@@ -10489,7 +10491,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אפייה]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20180128153940319" modified="20200212143605187" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="ארוחות">
+<div created="20180128153940319" modified="20200213155033315" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -10498,7 +10500,10 @@ well,
 
 אני אוהב שבארוחה תהיה הרמוניה בין מיני המזון, ושהכי חשוב שיהיה טעים, כייף, שמח ורועש.
 
-&lt;&lt;list-links filter:&quot;[tag[ארוחות]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[ארוחות]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[Meals]]&gt;&gt;</pre>
 </div>
 <div created="20161112191527440" modified="20200115165618448" tags="[[חיות אוכל]] ארוחות" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
@@ -10806,7 +10811,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20190415190001072" modified="20190416155413504" tags="קפה [[חיות אוכל]] [[מטא בדיון]]" title="בתי קפה">
+<div created="20190415190001072" modified="20200213161413930" tags="קפה [[חיות אוכל]] [[מטא בדיון]]" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -10817,7 +10822,9 @@ Is where I want to be
 
 
 &lt;&lt;list-links filter:&quot;[tag[בתי קפה]]&quot;&gt;&gt;
-</pre>
+
+
+&lt;&lt;englink [[Coffee shops]]&gt;&gt;</pre>
 </div>
 <div created="20180704182012305" modified="20200212224602904" tags="מטבחים" title="בתים">
 <pre>[img[pictures/batim.jpg]]
@@ -10910,7 +10917,7 @@ Is where I want to be
 
 חוץ מזה [[שג'ונג|ג'ונג]] מגיע לכל מקום [[במטרו|תחבורה ציבורית]], פעם בחודש בערך הוא לוקח רכבת לליון [[לדו'ג'ו|https://dojolyon.fr/]] של המאסטר שלו [[לאייקידו|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%A7%D7%99%D7%93%D7%95]].</pre>
 </div>
-<div created="20170829074025058" modified="20200213152040243" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20200213162510157" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
 !!![[הצוות]]:
@@ -11785,7 +11792,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180123164835249" modified="20200213152953900" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
+<div created="20180123164835249" modified="20200213163112242" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
 <pre>[img[pictures/david-byrne.jpg]]
 
 !!![[יויו]]:
@@ -12022,12 +12029,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20180702120433551" modified="20181018173544993" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות [[כאן בגטו]] מסעדות" title="האחים">
+<div created="20180702120433551" modified="20200213154056796" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות [[כאן בגטו]] מסעדות" title="האחים">
 <pre>[img[pictures/the-brothers.jpg]]
 
 !!![[יויו]]:
 
-[[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן אצל ז'נבייב]].</pre>
+[[תומר]] לקח אותנו כבר בפעמים הקודמות שביקרנו את [[אבא|אבא יואל]], לאכול [[באחים|http://www.haachim.co.il/]], וברגע שנכנסנו היה ברור שמדובר [[באחיות|שאלון האחיות]]. תמיד מלא שם באנשים שנראים מאד שמחים ונהנים, אלכוהול לא יקר יחסית לרפובליקה, צוות הכי נחמד ואדיב. יש שולחנות בחוץ על המדרכה, ובחלק הפנימי,  נמצאים שולחנות מסוגים שונים, הבר של &quot;הפס הקר&quot;  ובר המשקאות, גם סביבם אפשר לשבת. יש מוסיקה כזו כאילו שנכנסת לסרט של אמיר קוסטוריצה שפגש את [[טוני סופרנו|הסופרנוס]] רק בלי הרציחות והמכות, ואז הם הלכו להיפגש עם היווני [[מהסמויה|הסמויה]] בקטע טוב, ופגשו את אריק לביא. ממש ממש טעים שם. בשרים וירקות על האש אבל לא רק, ירקות בכל מיני צורות. אני מת על החומוס שלהם ועל הפיתות, והכי על הלבנה. ביקור אצלם תמיד נותן לי השראה כשאני חוזר [[למטבח|דליקטסן אצל ז'נבייב]].
+
+
+&lt;&lt;englink [[HaAchim]]&gt;&gt;</pre>
 </div>
 <div created="20171002200359738" modified="20190310235730762" tags="סדרות אימהות טלוויזיה" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
@@ -12357,7 +12367,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 בימי החורף האלה, בשעות אחר הצהריים, אני לא פעם צועד עם [[ננו הקטנה|ננו שלי ואני]]  ללבונטין 1 ואנחנו נכנסים [[למגדלור|https://www.hamigdalor.co.il/]] מלאת הפיתויים.</pre>
 </div>
-<div created="20170422140632892" modified="20190622105644198" tags="ארוחות מתכונים מטבחים" title="המטבח על פי ז'נבייב">
+<div created="20170422140632892" modified="20200213162121858" tags="ארוחות מתכונים מטבחים" title="המטבח על פי ז'נבייב">
 <pre>[img[pictures/genevieve-food.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12372,7 +12382,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-
+&lt;&lt;englink [[The kitchen according to Genevieve]]&gt;&gt;
 
 
 </pre>
@@ -12529,7 +12539,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.</pre>
 </div>
-<div created="20170826115226554" modified="20200213143823059" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
+<div created="20170826115226554" modified="20200213162746383" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12763,7 +12773,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20200213152832919" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20200213161334015" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 
 ''
@@ -12915,13 +12925,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170620145929305" modified="20190617133812072" tags="[[קופים ממונעים]] קפה מטבחים" title="חיות אוכל">
+<div created="20170620145929305" modified="20200213154553854" tags="[[קופים ממונעים]] קפה מטבחים" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 ''אוכל שאנחנו מכינים ברגיל:''
 
 
-&lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[חיות אוכל]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[Food addicts]]&gt;&gt;</pre>
 </div>
 <div created="20180715130735407" modified="20190617133831770" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים" title="חינאווי">
 <pre>[img[pictures/hinawi.jpg]]
@@ -15173,7 +15186,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 רוע הלב שלה הוא בלתי נסלח, ואני רק מציע - אל תתעסקו עם הדפני!!!</pre>
 </div>
-<div created="20181018172329578" modified="20190617134323164" tags="[[חיות אוכל]] מטבחים" title="מסעדות">
+<div created="20181018172329578" modified="20200213155504678" tags="[[חיות אוכל]] מטבחים" title="מסעדות">
 <pre>[img[pictures/misadot.jpg]]
 
 !!![[הצוות]]:
@@ -15182,7 +15195,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[מסעדות]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[מסעדות]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[Restaurants]]&gt;&gt;</pre>
 </div>
 <div created="20170507173634371" modified="20170507220735840" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
@@ -15432,14 +15448,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180604190242526" modified="20200212144358968" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים">
+<div created="20180604190242526" modified="20200213162539717" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים">
 <pre>[img[pictures/matconim.jpg]]
 
 !!![[אירי]]:
 
 אצל אווה המתכונים כתובים על פתקאות קטנות, תפוסים עם אטב למדף, וכתובות בהם רק הכמויות, ברוב המקרים אפילו לא השם, כי היא לא זוכרת כמויות. אופן ההכנה ברור לה. וזה הקטע עם מתכונים, שלפני שמכינים אותם צריך להתכונן. לקרוא אותם ולהבין מה עושים כמו טקסט עבור שחקן.
 
-&lt;&lt;list-links filter:&quot;[tag[מתכונים]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[מתכונים]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[Recipes]]&gt;&gt;
+</pre>
 </div>
 <div created="20180107120555995" modified="20200212144329677" tags="[[חיות אוכל]] ארוחות הצוות מתכונים מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="מתכונים טבעוניים">
 <pre>[img[pictures/vegan.jpg]]
@@ -17562,7 +17581,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20190408151532586" modified="20190415192217452" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[בתי קפה]]" title="קפה">
+<div created="20190408151532586" modified="20200213160053983" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[בתי קפה]]" title="קפה">
 <pre>[img[pictures/coffee.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17573,6 +17592,11 @@ Fapina''
 
 
 &lt;&lt;list-links filter:&quot;[tag[קפה]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[Coffee]]&gt;&gt;
+
+
+
 </pre>
 </div>
 <div created="20181102155349776" modified="20190408154011466" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="קפה וממתקים">
