--- a/english.html
+++ b/english.html
@@ -325,6 +325,8 @@ Error message and password prompt
 
 <li>Iry</li>
 
+<li>Iry and Gura</li>
+
 <li>Iry claims</li>
 
 <li>James Gandolfini</li>
@@ -378,6 +380,8 @@ Error message and password prompt
 <li>Single parent children</li>
 
 <li>soul</li>
+
+<li>The archive's trustees</li>
 
 <li>The blue is already here</li>
 
@@ -8697,14 +8701,14 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[סרטים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213154202937" modified="20200213154452151" tags="Kitchens [[Monkeys with car keys]] Coffee" title="Food addicts">
+<div created="20200213154202937" modified="20200213164445391" tags="Kitchens [[Monkeys with car keys]] Coffee" title="Food addicts">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 
 &lt;&lt;list-links filter:&quot;[tag[Food addicts]]&quot;&gt;&gt;
 
-
- &lt;&lt;heblink [[jחיות אוכל]]&gt;&gt;</pre>
+ &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
+</pre>
 </div>
 <div created="20200213145354960" modified="20200213152652198" tags="[[Coen sister]] Mothers" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
@@ -8818,6 +8822,15 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
 </div>
+<div created="20200213163404363" modified="20200213163619103" tags="[[Coen sister]] [[The archive's trustees]] [[On the road to somewhere]]" title="Iry and Gura">
+<pre>
+[img[pictures/asakim-caragil.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Iry and Gura]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[אירי וגורה]]&gt;&gt;</pre>
+</div>
 <div created="20200213162602188" modified="20200213163043550" tags="[[Iry and Gura]]" title="Iry claims">
 <pre>[img[pictures/iri-toenet.jpg]]
 
@@ -8868,7 +8881,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213162655549" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213165330177" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -9076,6 +9089,14 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
+</div>
+<div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
+<pre>
+[img[pictures/neemaney.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[The archive's trustees]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
 <div created="20200212155206056" modified="20200212162915903" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
