--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[נאמני הגנזך]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213155128893" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213163857746" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10257,14 +10257,18 @@ well,
 
 </pre>
 </div>
-<div created="20170714164238581" modified="20170715115636559" tags="" title="אירי וגורה">
+<div created="20170714164238581" modified="20200213163735320" tags="[[נאמני הגנזך]] [[אחות כהן]] [[בדרך לאן שהוא]]" title="אירי וגורה">
 <pre>[img[pictures/asakim-caragil.jpg]]
 
 !!![[אירי]] [[וגורה|גורה]]:
 
 ''כן, למרות שהגענו לכדור הזה, אנחנו משדרות,  עסקים כרגיל.''
 
-&lt;&lt;list-links filter:&quot;[tag[אירי וגורה]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[אירי וגורה]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[Iry and Gura]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170601134808349" modified="20200213163132623" tags="[[אירי וגורה]]" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
@@ -12925,7 +12929,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170620145929305" modified="20200213154553854" tags="[[קופים ממונעים]] קפה מטבחים" title="חיות אוכל">
+<div created="20170620145929305" modified="20200213164325618" tags="[[קופים ממונעים]] קפה מטבחים" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 ''אוכל שאנחנו מכינים ברגיל:''
@@ -15014,7 +15018,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213142735709" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213165123535" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -15471,7 +15475,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170612161528805" modified="20170612195323786" title="נאמני הגנזך">
+<div created="20170612161528805" modified="20200213165152573" tags="הצוות [[קופים ממונעים]] [[בדרך לאן שהוא]] [[משפחת באומן]] [[מטא בדיון]]" title="נאמני הגנזך">
 <pre>[img[pictures/neemaney.jpg]]
 
 !!![[יויו]]:
@@ -15483,7 +15487,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[נאמני הגנזך]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[נאמני הגנזך]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[The archive's trustees]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170112193700442" modified="20170728195240955" tags="[[משפחת באומן]]" title="נדיה">
 <pre>[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
