--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[נאמני הגנזך]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213163857746" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213170648102" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12084,12 +12084,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170918121843399" modified="20190126102437756" tags="[[אחיות חוץ]] סרטים" title="הארי דין סטנטון">
+<div created="20170918121843399" modified="20200213170643784" tags="[[אחיות חוץ]] סרטים" title="הארי דין סטנטון">
 <pre>[img[pictures/harry-dean-stanton.jpg]]
 
 !!![[יויו]]:
 
-[[אתמול|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] הלך לעולמו [[הארי דין סטנטון|http://www.imdb.com/name/nm0001765/]], שבשבילי הוא היה, יותר מכל, טראוויס, [[מפריז-טקסס|http://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].</pre>
+[[אתמול|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] הלך לעולמו [[הארי דין סטנטון|http://www.imdb.com/name/nm0001765/]], שבשבילי הוא היה, יותר מכל, טראוויס, [[מפריז-טקסס|http://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].
+
+&lt;&lt;englink [[Harry Dean Stanton]]&gt;&gt;
+</pre>
 </div>
 <div created="20190324091820505" modified="20190617133335451" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="הבריסטות שכאן">
 <pre>[img[pictures/barista.jpg]]
@@ -15018,7 +15021,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213165123535" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213170616867" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -15411,14 +15414,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170608171939614" modified="20190314144552436" tags="[[נאמני הגנזך]] [[סיפורים אמיתיים]] בתים" title="משפחת באומן">
+<div created="20170608171939614" modified="20200213170015228" tags="[[נאמני הגנזך]] [[סיפורים אמיתיים]] בתים" title="משפחת באומן">
 <pre>[img[pictures/baumans.jpg]]
 
 !!![[יויו]]:
 זה חלק מסלון הבית בכפר בו [[גדלנו|הסיפור על גורה]] לתפארת, עם אבא יואל ואימא דינה ז&quot;ל.
 נדיה הבכורה, קרן, אני, גיגי וגורה הקטנה והמתוקה.
 
-&lt;&lt;list-links filter:&quot;[tag[משפחת באומן]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[משפחת באומן]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[The Baumans]]&gt;&gt;</pre>
 </div>
 <div created="20170704162525777" modified="20180704184320639" tags="בתים" title="משפצים ובונים רהיטים">
 <pre>[img[pictures/meshapzim-rahitim.jpg]] 
