--- a/english.html
+++ b/english.html
@@ -307,6 +307,8 @@ Error message and password prompt
 
 <li>HaAchim</li>
 
+<li>Harry Dean Stanton</li>
+
 <li>Here in the Ghetto</li>
 
 <li>HH</li>
@@ -382,6 +384,8 @@ Error message and password prompt
 <li>soul</li>
 
 <li>The archive's trustees</li>
+
+<li>The Baumans</li>
 
 <li>The blue is already here</li>
 
@@ -8290,7 +8294,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213163020350" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213170340382" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8730,6 +8734,15 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
+<div created="20200213170345269" modified="20200213170549578" tags="[[Outer sisters]] Films" title="Harry Dean Stanton">
+<pre>
+[img[pictures/harry-dean-stanton.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Harry Dean Stanton ]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[הארי דין סטנטון]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212164615918" modified="20200212164757805" tags="Metafiction [[Outer sisters]]" title="Here in the Ghetto">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
@@ -8822,7 +8835,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213163404363" modified="20200213163619103" tags="[[Coen sister]] [[The archive's trustees]] [[On the road to somewhere]]" title="Iry and Gura">
+<div created="20200213163404363" modified="20200213170518414" tags="[[Coen sister]] [[The archive's trustees]] [[On the road to somewhere]]" title="Iry and Gura">
 <pre>
 [img[pictures/asakim-caragil.jpg]]
 
@@ -8881,7 +8894,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213165330177" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213165919237" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -9097,6 +9110,14 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 &lt;&lt;list-links filter:&quot;[tag[The archive's trustees]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
+</div>
+<div created="20200213165708457" modified="20200213165847313" tags="[[The archive's trustees]] [[True stories]] Houses" title="The Baumans">
+<pre>
+[img[pictures/baumans.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[The Baumans]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[משפחת באומן]]&gt;&gt;</pre>
 </div>
 <div created="20200212155206056" modified="20200212162915903" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
