--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[וויקליף ז'אן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213170648102" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213171031928" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12747,12 +12747,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התדר ורומנו נמצאים [[בבית רומנו|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%AA_%D7%A8%D7%95%D7%9E%D7%A0%D7%95_(%D7%AA%D7%9C_%D7%90%D7%91%D7%99%D7%91)]] שבדרך יפו- תל אביב, וגם לשם היגעתי בכמה הזדמנויות בעיקר כדי לראות את [[jazz]]. [[לתדר|https://teder.fm/]], רדיו שבחסותו נערכים מופעים בחצר הבניין השווה ביותר, צמודה פיצה שווה של [[רומנו|https://www.tripadvisor.co.il/Restaurant_Review-g293984-d8545357-Reviews-Romano-Tel_Aviv_Tel_Aviv_District.html]]. שבקומה השנייה הוא מסעדה - מהמקומות של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] וכנופייתו, שמסעדותיו  טובות הווייב וטעם עושות כאן כיף. פעילויות רבות שיתוף, מסתבר, קורות שם גם עם הסוזי ועוד. תענוג שמח כל הסיפור הזה.</pre>
 </div>
-<div created="20170602111237129" modified="20200212143840597" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="וויקליף ז'אן">
+<div created="20170602111237129" modified="20200213171027914" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
 
 !!![[גורה]]:
 
-התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
+התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]
+
+&lt;&lt;englink [[Wyclef Jean]]&gt;&gt;</pre>
 </div>
 <div created="20170606183630416" modified="20170802233741305" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
@@ -15480,7 +15482,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170612161528805" modified="20200213165152573" tags="הצוות [[קופים ממונעים]] [[בדרך לאן שהוא]] [[משפחת באומן]] [[מטא בדיון]]" title="נאמני הגנזך">
+<div created="20170612161528805" modified="20200213170959382" tags="הצוות [[קופים ממונעים]] [[בדרך לאן שהוא]] [[משפחת באומן]] [[מטא בדיון]]" title="נאמני הגנזך">
 <pre>[img[pictures/neemaney.jpg]]
 
 !!![[יויו]]:
