--- a/english.html
+++ b/english.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>Wishing star 04</li>
 
+<li>Wyclef Jean</li>
+
 <li>Yoyo</li>
 
 </ul>
@@ -8265,7 +8267,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200213144439974" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200213170824756" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8274,7 +8276,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Wyclef Jean]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8294,7 +8296,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213170340382" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213170820652" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8894,7 +8896,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213165919237" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213171058269" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -9243,6 +9245,15 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 
  &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
+</pre>
+</div>
+<div created="20200213170826128" modified="20200213171128751" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
+<pre>
+[img[pictures/wyclef-jean.jpg]]
+
+ &lt;&lt;heblink [[וויקליף ז'אן]]&gt;&gt;
+
+
 </pre>
 </div>
 <div created="20200101132642919" modified="20200101133516550" tags="" title="Yoyo">
