--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[וויקליף ז'אן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213171031928" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213171622062" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12756,7 +12756,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wyclef Jean]]&gt;&gt;</pre>
 </div>
-<div created="20170606183630416" modified="20170802233741305" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
+<div created="20170606183630416" modified="20200213171910032" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
 
 !!![[גורה]]:
@@ -12772,7 +12772,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אם אני זקוקה למשהו אני שולחת לחברים הודעה [[באתרפאד|http://etherpad.org/]].
 
 
-
+&lt;&lt;englink [[ Vincent Van Gogh]]&gt;&gt;
 </pre>
 </div>
 <div created="20170728103845790" modified="20190126102555354" tags="[[אחיות חוץ]] סרטים" title="וס אנדרסון">
@@ -15023,7 +15023,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213170616867" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213171840488" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
