--- a/english.html
+++ b/english.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>Vincent Van Gogh</li>
 
+<li>Wes Anderson</li>
+
 <li>Wishing star 04</li>
 
 <li>Wyclef Jean</li>
@@ -8298,7 +8300,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213171602415" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213175729999" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8739,8 +8741,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200213170345269" modified="20200213170549578" tags="[[Outer sisters]] Films" title="Harry Dean Stanton">
-<pre>
-[img[pictures/harry-dean-stanton.jpg]]
+<pre>[img[pictures/harry-dean-stanton.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Harry Dean Stanton ]]&quot;&gt;&gt;
 
@@ -8840,8 +8841,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 </pre>
 </div>
 <div created="20200213163404363" modified="20200213170518414" tags="[[Coen sister]] [[The archive's trustees]] [[On the road to somewhere]]" title="Iry and Gura">
-<pre>
-[img[pictures/asakim-caragil.jpg]]
+<pre>[img[pictures/asakim-caragil.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Iry and Gura]]&quot;&gt;&gt;
@@ -9108,16 +9108,14 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
 <div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
-<pre>
-[img[pictures/neemaney.jpg]]
+<pre>[img[pictures/neemaney.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The archive's trustees]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
 <div created="20200213165708457" modified="20200213165847313" tags="[[The archive's trustees]] [[True stories]] Houses" title="The Baumans">
-<pre>
-[img[pictures/baumans.jpg]]
+<pre>[img[pictures/baumans.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The Baumans]]&quot;&gt;&gt;
 
@@ -9242,13 +9240,19 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 </pre>
 </div>
 <div created="20200213171604745" modified="20200213171814296" tags="[[Outer sisters]]" title="Vincent Van Gogh">
-<pre>
-[img[pictures/van-goch.jpg]]
+<pre>[img[pictures/van-goch.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Vincent Van Gogh ]]&quot;&gt;&gt;
 
 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
+</div>
+<div created="20200213175731975" modified="20200213175948693" tags="[[Outer sisters]] Films" title="Wes Anderson">
+<pre>
+[img[pictures/wes-anderson.jpg]]
+
+ &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
+</pre>
 </div>
 <div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
 <pre>[img[pictures/ela.jpg]]
@@ -9258,9 +9262,8 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
  &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213170826128" modified="20200213171128751" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
-<pre>
-[img[pictures/wyclef-jean.jpg]]
+<div created="20200213170826128" modified="20200213175902300" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
+<pre>[img[pictures/wyclef-jean.jpg]]
 
  &lt;&lt;heblink [[וויקליף ז'אן]]&gt;&gt;
 
