--- a/english.html
+++ b/english.html
@@ -269,6 +269,8 @@ Error message and password prompt
 
 <li>Bjork</li>
 
+<li>Changing</li>
+
 <li>Children</li>
 
 <li>Christmas dinner</li>
@@ -8557,6 +8559,12 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
+<div created="20200213180145409" modified="20200213180416623" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
+<pre>
+[img[pictures/meshanim.jpg]]
+
+ &lt;&lt;heblink [[משנים]]&gt;&gt;</pre>
+</div>
 <div created="20200212205329430" modified="20200212214202150" tags="Mothers [[Single parent children]] [[Dandan went]]" title="Children">
 <pre>[img[pictures/yeladim.jpg]]
 
@@ -8898,7 +8906,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213171730669" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213180333135" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
