--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213175829248" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213180301026" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15025,7 +15025,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213171840488" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213180443439" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -15406,7 +15406,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[חבר]] זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות. אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]], שמבוססת על הספרים שכתב [[האיש הזה|https://www.youtube.com/watch?v=5YxeHFU8SKE]].
 </pre>
 </div>
-<div created="20170802165524913" modified="20200208130203888" tags="[[נאמני הגנזך]] בתים [[בדרך לאן שהוא]]" title="משנים">
+<div created="20170802165524913" modified="20200213180506855" tags="[[נאמני הגנזך]] בתים [[בדרך לאן שהוא]]" title="משנים">
 <pre>[img[pictures/meshanim.jpg]]
 
 !!![[גורה]]:
@@ -15415,6 +15415,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 השארתי בצד אחד של החדר מיטה וכמה רהיטים ובחציו השני שמתי שולחן ענקי עם המחשב ודפים ועפרונות צבעוניים, ואני מתרכזת.
 
+
+&lt;&lt;englink [[Changing]]&gt;&gt;
 
 </pre>
 </div>
