--- a/english.html
+++ b/english.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>David Byrne</li>
 
+<li>Draft of 'Kitchens'</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -362,6 +364,8 @@ Error message and password prompt
 <li>Mothers</li>
 
 <li>Music</li>
+
+<li>Northern Exposure</li>
 
 <li>On the road to somewhere</li>
 
@@ -8282,7 +8286,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'Kitchens']] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8302,7 +8306,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213175729999" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213180653431" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8657,6 +8661,14 @@ Be good.
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
+<div created="20200212224246020" draft.of="Kitchens" draft.title="Kitchens" modified="20200213180838328" tags="Houses [[Food addicts]]" title="Draft of 'Kitchens'">
+<pre>[img[pictures/kitchens.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[מטבחים]]&gt;&gt;
+</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -9007,6 +9019,14 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[מוזיקה]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200213180740266" modified="20200213180956509" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
+<pre>
+[img[pictures/northern-exposure.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Northern Exposure ]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
 </div>
 <div created="20200212162303735" modified="20200212163646719" tags="[[True stories]] [[Monkeys with car keys]]" title="On the road to somewhere">
 <pre>[img[pictures/baderech-lean.jpg]]
