--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213180301026" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213181106085" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13036,14 +13036,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
 </div>
-<div created="20170711174005898" modified="20190310195427083" tags="סדרות [[אחיות חוץ]] טלוויזיה" title="חשיפה לצפון">
+<div created="20170711174005898" modified="20200213181101342" tags="סדרות [[אחיות חוץ]] טלוויזיה" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[יויו]]:
 
 [[סיסלי|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]] בשבילי היא [[בית שני|קופים ממונעים]], ואד, ג'ואל, הולינג, שלי, כריס, רות'-אן, מגי, מרילין וכל השאר -  הם גם - אחיות שלי
 
-[[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]                          (אחד מקטעי הוידאו הבודדים שנשארו ביוטיוב)</pre>
+[[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]                          (אחד מקטעי הוידאו הבודדים שנשארו ביוטיוב)
+
+&lt;&lt;englink [[Northern Exposure]]&gt;&gt;</pre>
 </div>
 <div created="20180822175257734" modified="20180823134317531" tags="[[כאן בגטו]] [[מטא בדיון]]" title="חשמל אבי">
 <pre>[img[pictures/hashmal-avi.jpg]]
@@ -15025,7 +15027,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213180443439" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213181037205" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
